--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@tiptap/extension-placeholder": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "@uiw/react-md-editor": "^4.0.11",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "marked": "^9.1.6",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
@@ -30,6 +34,7 @@
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "swr": "^2.4.0",
+    "turndown": "^7.2.0",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0"
   },
