--- a/package.json
+++ b/package.json
@@ -19,43 +19,43 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@tiptap/extension-placeholder": "^2.4.0",
-    "@tiptap/react": "^2.4.0",
-    "@tiptap/starter-kit": "^2.4.0",
+    "@tiptap/extension-placeholder": "^3.19.0",
+    "@tiptap/react": "^3.19.0",
+    "@tiptap/starter-kit": "^3.19.0",
     "@uiw/react-md-editor": "^4.0.11",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "marked": "^9.1.6",
     "gray-matter": "^4.0.3",
-    "lucide-react": "^0.563.0",
+    "lucide-react": "^0.564.0",
+    "marked": "^17.0.2",
     "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "swr": "^2.4.0",
-    "turndown": "^7.2.0",
-    "tailwind-merge": "^3.4.0",
+    "tailwind-merge": "^3.4.1",
+    "turndown": "^7.2.2",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^14.6.1",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/uuid": "^10.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "cross-env": "^7.0.3",
-    "cypress": "^13.15.0",
-    "eslint": "^9",
+    "@vitejs/plugin-react": "^5.1.4",
+    "cross-env": "^10.1.0",
+    "cypress": "^15.10.0",
+    "eslint": "^10",
     "eslint-config-next": "16.1.6",
-    "jsdom": "^25.0.1",
-    "start-server-and-test": "^2.0.5",
+    "jsdom": "^28.1.0",
+    "start-server-and-test": "^2.1.3",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vitest": "^2.1.9"
+    "vitest": "^4.0.18"
   }
 }
